# CopperSpiceHelloWorld

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
vscode-settings/: README.md  launch.json  settings.json
